# gitstage

./: .gitignore  README.md  pyproject.toml  requirements.txt  structure.txt  todo.md
gitstage/: __init__.py  cli.py
gitstage/commands/: branch.py  clean.py  cr.py  flatten.py  init.py  promote.py  push.py  review.py  utils.py
gitstage/commands/cr/: __init__.py  edit.py  utils.py
gitstage/config/: stageflow.json
tests/: test_cli.py  test_cr.py  test_push.py
